# otobo-mcp-server

./: .gitignore  README.md  otobo_mcp_server.py  pyproject.toml
.github/workflows/: build_and_publish_pypi.yaml
deployment/: otobo-docker-compose.yaml  wb.yaml
